@@ -3,7 +3,8 @@
 ############################################
 
 3013-01 1.9
-- add uptime and interface-uage for AVM FRITZ!Box 7390
+- add uptime and interface-usage for AVM FRITZ!Box 7390
+- add cpu-load and memory-usage for AVM FRITZ!Box 7390
 
 2013-01-13 1.8
 -add cpu&memory check for juniper netscreen
